3rd update - refined running code